# synergie-global

./: README.md  pyproject.toml
src/agent/: core.py  data_model.py  demo.py  llm.py  prompts.py  sandbox.ipynb  temp.py  tools.py  transcript.csv  utils.py
